Sharded cluster count command doesn't throw errors on invalid options

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.3
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v4.2
    • Query 2019-12-30, Query 2020-01-13, Query 2020-01-27
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Similar to SERVER-42410, passing invalid options to mongos doesn't throw an error, but instead ignores the invalid option.

      For example, this command should throw an error but does not.

      db.coll.count({},{"random": true})

            Assignee:
            Katherine Wu (Inactive)
            Reporter:
            Katherine Wu (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: