SERVER-45253 Throw errors on invalid options for sharded cluster count command